@@ -1,5 +1,6 @@
 4.0.0:
 - New: completely rewritten and reorganized settings app
+- New: Material You wallpaper
 - New: Android 12 support (not fully tested yet)
 - New: translation via Transifex (less than 80 strings to translate, link in About!)
 - Improved: theme selection and internal wallpaper management
